@@ -372,6 +372,8 @@ BEGIN
     CONTROL         "1024",IDC_Tex1024,"Button",BS_AUTORADIOBUTTON,294,290,32,10
     CONTROL         "",IDC_ARASlider,"msctls_trackbar32",TBS_AUTOTICKS | TBS_TOP | WS_TABSTOP,155,323,191,20
     PUSHBUTTON      "Reset to Defaults",IDC_DEFAULTS,154,360,63,14
+    PUSHBUTTON      "Set for LowEnd PC",IDC_DEFAULTS_LOW,154,345,63,14
+    PUSHBUTTON      "Set for HighEnd PC",IDC_DEFAULTS_HIGH,225,345,65,14
     DEFPUSHBUTTON   "OK",IDOK,240,360,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,297,360,50,14
     GROUPBOX        "Display",IDC_STATIC,7,7,142,367
