@@ -3,6 +3,8 @@ VP 10.6.0 Changelog
 
 - remove all table encryption, old locked tables automatically unlock now
 
+- add buttons to video preferences to easily setup defaults for low- or high-end PCs
+
 - see core scripts (header of core.vbs) for the respective changelog (version 3.57)
 - see CommandReference.txt for the changelog of all the scripting properties/interface changes
 
